--- a/amagama/templates/translate.html
+++ b/amagama/templates/translate.html
@@ -191,6 +191,8 @@
     <!-- JavaScript imports -->
     <script src="{{ url_for('web_ui.static', filename='js/vendor/jquery-1.11.0.min.js') }}"></script>
     <script src="{{ url_for('web_ui.static', filename='js/vendor/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('web_ui.static', filename='js/vendor/spin-2.0.0.min.js') }}"></script>
+    <script src="{{ url_for('web_ui.static', filename='js/vendor/jquery.spin.js') }}"></script>
     <script src="{{ url_for('web_ui.static', filename='js/amagama.js') }}"></script>
     <script>
 $(function() {
